# scrapy-fake-tls

./: .gitignore  README.md  pyproject.toml
scrapy_fake_tls/: __init__.py  handler.py  session.py
