[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapy-fake-tls"
version = "1.0.0"
description = "Scrapy download handler with TLS fingerprint impersonation via curl_cffi"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "lovecube", email = "ahapka1@gmail.com" },
]
keywords = [
    "scrapy",
    "tls",
    "fingerprint",
    "impersonation",
    "curl_cffi",
    "anti-detect",
    "web-scraping",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Scrapy",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "scrapy>=2.13",
    "curl_cffi>=0.7",
]

[project.urls]
Homepage = "https://github.com/blind0/scrapy-fake-tls"
Repository = "https://github.com/blind0/scrapy-fake-tls"
Issues = "https://github.com/blind0/scrapy-fake-tls/issues"

[tool.setuptools.packages.find]
include = ["scrapy_fake_tls*"]
